terraform/modules/monitoring/main.tf
resource "aws_security_group" "monitoring" {
  name        = "${var.environment}-docuthinker-monitoring-sg"
  description = "Security group for monitoring tools"
  vpc_id      = var.vpc_id

  ingress {
    from_port   = 9090
    to_port     = 9090
    protocol    = "tcp"
    cidr_blocks = [data.aws_vpc.selected.cidr_block]
  }

  ingress {
    from_port   = 3000
    to_port     = 3000
    protocol    = "tcp"
    cidr_blocks = [data.aws_vpc.selected.cidr_block]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "${var.environment}-docuthinker-monitoring-sg"
  }
}

data "aws_vpc" "selected" {
  id = var.vpc_id
}
